# RearMirror_quant_backtest

./: .gitignore  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  Dockerfile  HANDOFF.md  ISSUE_incremental_feature.md  LICENSE  PROGRESS.md  README.md  WORKLOG.md  WORKLOG_index.json  _formal_neutralize_run.py  _qa_neutralize_run.py  daily_bar_fix_plan.md  docker-compose.yml  pipeline.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_api.py  run_experiment.py  task_cli.py  test_duckdb.py  test_full_pipeline.py
.claude/: settings.json
WORKLOG_archive/: 2026Q2.md
api/: __init__.py  main.py
configs/: base_config.yaml
docs/: METHODOLOGY_TEMPLATE.md  adj_factor_full_rebuild_runbook.md  architecture_design.md  architecture_v2.md  bootstrap_from_scratch.md  data_layer_convergence_blueprint.md  disaster_recovery.md  first_train_guide.md  frontend_blueprint.md  frontend_design.md  frontend_feature_planning.md  incremental_update_flow.md  open_items.md  production_readiness_report.md  raw_feature_recovery_plan.md  rearmirror_implementation_plan.md  release_acceptance_checklist.md  release_blocking_fix_report.md  release_final_execution_report.md  release_final_push_plan.md  release_manifest.md  reproducibility_report.md  runtime_versions.md  storage_management_blueprint.md
frontend/: package-lock.json  package.json  tsconfig.app.json
src/: __init__.py  cleanup_dryrun.py  config_loader.py  cross_section.py  experiment_store.py  feature_chunk_builder.py  feature_engine.py  label_gen.py  log_utils.py  paths.py  price_mode.py  registry.py  runtime_modes.py  (+2 more)
(+125 files in other folders)
