[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rearmirror"
version = "0.9.0"
description = "A股量化回测中台"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
# 让 `import src`, `import pipeline` 直接生效
"" = "."
